Sun Dec 23 17:57:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/profiler.rb (Profiler__::PROFILE_PROC): use TracePoint.

Sun Dec 23 16:13:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/erb.rb: typos for ERB::new link

Sun Dec 23 16:06:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/erb.rb: Document ERB::new trim_mode '-' for lines ending in -%>
	  [ruby-core:51084] [Bug #7608]

Sun Dec 23 15:25:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* lib/irb/ruby-lex.rb: Add handling for %i and %I quoting to irb
	  Patch by flori [ruby-core:49550] [Bug #7392] [Github Issue #157]

Sun Dec 23 15:05:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_check_funcall_with_hook): rb_check_funcall with hook
	  which is called before calling method_missing or target method.

	* marshal.c (w_object, r_object0): use rb_check_funcall_with_hook
	  instead of respond_to? and call.

Sun Dec 23 14:52:00 2012  Zachary Scott  <zachary@zacharyscott.net>

	* re.c (rb_reg_eqq): doc: #=== is not a synonym for #=~, added example
	  [ruby-dev:46746] [Bug #7571]

Sun Dec 23 14:35:13 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (BLOCKING_REGION): if fail_if_interrupted is false ignore
	  the result of blocking_region_begin(), since it always is true in
	  that case.  suppress "uninitialized" warnings.

Sun Dec 23 09:34:07 2012  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/check_command.rb:  Added --doctor and --dry-run
	  options to clean up after failed uninstallation.
	* test/rubygems/test_gem_commands_check_command.rb:  Test for above.

	* lib/rubygems/commands/push_command.rb:  Allow pushes from RubyGems
	  2.0.0.preview3

	* lib/rubygems/commands/update_command.rb:  Use Gem.ruby_version

	* lib/rubygems/dependency.rb:  Update style.

	* lib/rubygems/installer.rb:  Ensure installed gem specifications will
	  be useable.  Refactor.
	* test/rubygems/test_gem_installer.rb:  ditto.
