@@ -1,4 +1,7 @@
-Sun Dec 23 17:57:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Sun Dec 23 17:57:25 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/profiler.rb (Profiler__::Wrapper): support calling singleton
+	  methods of an instance of BasicObject.
 
 	* lib/profiler.rb (Profiler__::PROFILE_PROC): use TracePoint.
 
